# evervault-architect-mcp

./: .gitignore  FUTURE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/evervault/: SKILL.md
evervault_mcp/: __init__.py  __main__.py  demo_mode.py  docs_context.md  errors.py  ev_api.py  redact.py  schema_analyzer.py  server.py  widgets.py
evervault_mcp/fixtures/: ev_docs_query.json  ev_encrypt.json  ev_function_run.json  ev_inspect.json  ev_relay_create.json  ev_relay_list.json  ev_schema_suggest.json
